--- a/templates/edit_backlog_form.html
+++ b/templates/edit_backlog_form.html
@@ -4,48 +4,52 @@
 
 
 {% block content %}
-<h2>Edit {{ backlog.game.title }}</h2>
 
-<form action="/confirm_backlog_change" class="inline" method="POST">
+<div class="edit-backlog-form">
+    <h2>Edit {{ backlog.game.title }}</h2><br>
 
-    <input type="hidden" name="backlog_id" value="{{ backlog.backlog_id }}">
+    <form action="/confirm_backlog_change" class="inline" method="POST">
+        <div  class="inside-edit-backlog" style="text-align: left;">
+            <input type="hidden" name="backlog_id" value="{{ backlog.backlog_id }}">
 
-    <p>Ownership Status:
-        <select name="ownership_status" >
-            <option value="Owned">Owned</option>
-            <option value="Not Owned">Not Owned</option>
-            <option value="Unreleased">Unreleased</option>
-        </select> </p>
-      
+            <p>Ownership Status: <br>
+                <select  class="form-select" name="ownership_status" >
+                    <option value="Owned">Owned</option>
+                    <option value="Not Owned">Not Owned</option>
+                    <option value="Unreleased">Unreleased</option>
+                </select> </p>
+            
 
-   <p>Currently Playing:
-    <select name="play_status">
-        <option value="Yes">Yes</option>
-        <option value="No">No</option>
-    </select> </p>
-   
+            <p>Currently Playing: <br>
+                <select class="form-select" name="play_status">
+                    <option value="Yes">Yes</option>
+                    <option value="No">No</option>
+                </select> </p>
+            
 
-    <p>Platform:
-    <select name="platforms" >
-        <option></option>
-        {% for platform in platforms %}
-            <option value="{{ platform.name}}">{{ platform.name }}</option>
-        {% endfor %}
-    </select> </p>
+            <p>Platform: <br>
+            <select class="form-select" name="platforms" >
+                <option></option>
+                {% for platform in platforms %}
+                    <option value="{{ platform.name}}">{{ platform.name }}</option>
+                {% endfor %}
+            </select> </p>
 
 
-    <p>Genre: 
-        <select name="genres" >
-            <option></option>
-            {% for genre in genres %}
-                <option value="{{ genre.name }}">{{ genre.name }}</option>
-            {% endfor %}
-        </select> </p>
+            <p>Genre: <br>
+                <select class="form-select" name="genres" >
+                    <option></option>
+                    {% for genre in genres %}
+                        <option value="{{ genre.name }}">{{ genre.name }}</option>
+                    {% endfor %}
+                </select> </p><br>
+        </div>
 
-    <input value="Add Game" type="submit">
-</form>
+        <input class="sign-in-btn btn" value="Edit Game" type="submit">
+    </form>
 
-<button onclick="location.href='/edit_backlog_selection'" type="button">Cancel</button> 
+    <button class="sign-in-btn btn" onclick="location.href='/edit_backlog_selection'" type="button">Cancel</button>
 
+</div>
 
 {% endblock %}
