--- a/templates/edit_backlog_selection.html
+++ b/templates/edit_backlog_selection.html
@@ -8,14 +8,15 @@
     <div class="container-fluid">
 
         <div class="del-game center-text  col-7">
-            <h4>Which entry would you like to change?</h4>
+            <h2>Which entry would you like to change?</h2>
 
             <form action="/edit_backlog" class="inline" method="POST">
-                <select class=" form-select-sm mt-4" name="edited_backlog">
+                <select class=" form-select mt-4" name="edited_backlog">
                         {% for backlog in backlogs %}
                         <option value="{{ backlog.backlog_id }}">{{ backlog.game.title }}</option>
                     {% endfor %}
                 </select>
+                <br>
                 <input value="Edit" class="btn btn-sm del-btn" type="submit">
             </form> 
 
