--- a/templates/about.html
+++ b/templates/about.html
@@ -7,8 +7,8 @@
     <div class="about-page">
         <h1>About Backlog Tracker</h1><br>
         <h4>Backlog Tracker is an app for keeping track of a your video game backlog. 
-        You can add games to your backlog, add reviews for games you've played, and keep data on your gameplay,
-         such as the number of hours per genre played or genres per platform played on. 
+        You can add games to your backlog, add reviews for games you've played, and see data on your gameplay,
+         such as the number of hours per genre played or hours played per platform. 
         I hope you enjoy this personal project.</h4> 
     </div>
 
