--- a/templates/base.html
+++ b/templates/base.html
@@ -54,9 +54,9 @@
                   <ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="/add_game">Add Game</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="delete_backlog">Delete Game</a></li>
-                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/edit_backlog_selection">Edit Game Entry</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="delete_backlog">Delete Game</a></li> 
                   </ul>
                 </li>
 
@@ -71,7 +71,9 @@
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/add_review">Add Review</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Edit/Remove</a></li>
+                    <li><a class="dropdown-item" href="/select_review_to_edit">Edit Review</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/select_review_to_delete">Delete Review</a></li>
                   </ul>
                 </li>
 
