--- a/templates/edit_backlog_selection.html
+++ b/templates/edit_backlog_selection.html
@@ -17,7 +17,7 @@
                     {% endfor %}
                 </select>
                 <br>
-                <input value="Edit" class="btn btn-sm del-btn" type="submit">
+                <input value="Edit" class="btn btn-sm del-btn inline" type="submit">
             </form> 
 
 
