--- a/templates/show_reviews.html
+++ b/templates/show_reviews.html
@@ -13,17 +13,17 @@
 
         <h1 style="margin-left: 10px;">{{ current_user.fname }}'s Reviews</h1> <br>
 
-        <button onclick="location.href='/view_backlog'" type="button" class="btn mb-5" style="background-color: transparent; color: white;border-color: white; float: left; margin-left: 10px;">Back</button> 
+        <button onclick="location.href='/view_backlog'" type="button" class="btn " style="background-color: transparent; color: white;border-color: white; float: left; margin-left: 10px;">Back</button> 
         <!-- <a class="btn" style="float: right; margin-left:10px; background-color: transparent; color: white;border-color: white;" href="/select_review_to_delete">Delete Review</a>
         <a class="btn" style="float: right; margin-left:10px; background-color: transparent; color: white;border-color: white;" href="/select_review_to_edit">Edit Review</a> -->
         <a class="btn" style="float: left; margin-left:10px; background-color: transparent; color: white;border-color: white;" href="/add_review">Add Review</a>
 
-        <div class="row row-cols-1 g-4">
+        <div class="row row-cols-1">
             {% for review in reviews %}
                     <div class="col">
-                        <div class="card review-cards">
+                        <div class="card review-cards mb-4">
                             <div class="card-body"> 
-                                <h3 class="card-subtitle mb-3" >{{ review.game.title}}</h3>
+                                <h2 class="card-subtitle mb-3" >{{ review.game.title}}</h2>
                                 <div class="card-text">
                                     <p>Score: {{ review.score}}</p>   
                                     <p>Played On: {{ review.platform }}</p>
@@ -42,28 +42,6 @@
     {% endblock %}
 
 
-        <!-- <form action="/edit_review_form" class="inline" method="POST">
-            <select name="review">
-                    {% for review in reviews %}
-                    <option value="{{ review.review_id }}">{{ review.game.title }}</option>
-                {% endfor %}
-            </select>
-            <input value="Edit" type="submit">
-        </form> 
-     -->
-    
-        <!-- <h2>Delete Review?</h2>
-        <h4>Which review would you like to remove?</h4>
-     
-        <form action="/delete_review" class="inline" method="POST">
-            <select name="review">
-                    {% for review in reviews %}
-                    <option value="{{ review.review_id }}">{{ review.game.title }}</option>
-                {% endfor %}
-            </select>
-            <input value="Delete" type="submit">
-        </form>  -->
-    
         
 
 
