--- a/templates/change_account.html
+++ b/templates/change_account.html
@@ -14,15 +14,13 @@
 
         <h1 class="center-text mb-5">{{ current_user.fname }} {{ current_user.lname}}'s Account </h1>
 
-        
-
         <div class="row">
             <div class="col-sm-4 col-md-7 col-lg-5 col-xl-4 col-xxl-4 mx-auto change-acct-width">
                 <div class="card-transparent">
                     <div class="card-body">
 
-                        <div class="card-title">
-                            <h3 class="center-text">Change Account Information</h3>
+                        <div class="card-title mx-auto">
+                            <h4 style="text-align: center;">Change Account Information</h4>
                         </div>
 
                         <form action="/change_account_info" method="POST">
